@@ -1,5 +1,6 @@
 #!/bin/bash
 
+# Copyright OpenSearch Contributors
 # SPDX-License-Identifier: Apache-2.0
 #
 # The OpenSearch Contributors require contributions made to
@@ -9,7 +10,9 @@
 # This script performs one-time setup for the OpenSearch tarball distribution.
 # It installs a demo security config and sets up the performance analyzer
 
-OPENSEARCH_HOME=`dirname $(realpath $0)`; cd $OPENSEARCH_HOME
+export OPENSEARCH_HOME=`dirname $(realpath $0)`
+export OPENSEARCH_PATH_CONF=$OPENSEARCH_HOME/config
+cd $OPENSEARCH_HOME
 
 ##Security Plugin
 SECURITY_PLUGIN="opensearch-security"
@@ -23,28 +26,24 @@ if [ -d "$OPENSEARCH_HOME/plugins/$SECURITY_PLUGIN" ]; then
 
     if [ "$DISABLE_SECURITY_PLUGIN" = "true" ]; then
         echo "Disabling OpenSearch Security Plugin"
-        sed -i '/plugins.security.disabled/d' $OPENSEARCH_HOME/config/opensearch.yml
-        echo "plugins.security.disabled: true" >> $OPENSEARCH_HOME/config/opensearch.yml
+        sed -i '/plugins.security.disabled/d' $OPENSEARCH_PATH_CONF/opensearch.yml
+        echo "plugins.security.disabled: true" >> $OPENSEARCH_PATH_CONF/opensearch.yml
     else
         echo "Enabling OpenSearch Security Plugin"
-        sed -i '/plugins.security.disabled/d' $OPENSEARCH_HOME/config/opensearch.yml
+        sed -i '/plugins.security.disabled/d' $OPENSEARCH_PATH_CONF/opensearch.yml
     fi
 fi
 
 ##Perf Plugin
 PA_PLUGIN="opensearch-performance-analyzer"
 
-if [ -d $OPENSEARCH_HOME/plugins/$PA_PLUGIN ]; then
-    chmod 755 $OPENSEARCH_HOME/plugins/$PA_PLUGIN/pa_bin/performance-analyzer-agent
-    chmod 755 $OPENSEARCH_HOME/bin/performance-analyzer-agent-cli
-fi
-
-if ! grep -q '## OpenDistro Performance Analyzer' $OPENSEARCH_HOME/config/jvm.options; then
+if ! grep -q '## OpenDistro Performance Analyzer' $OPENSEARCH_PATH_CONF/jvm.options; then
    CLK_TCK=`/usr/bin/getconf CLK_TCK`
-   echo >> $OPENSEARCH_HOME/config/jvm.options
-   echo '## OpenDistro Performance Analyzer' >> $OPENSEARCH_HOME/config/jvm.options
-   echo "-Dclk.tck=$CLK_TCK" >> $OPENSEARCH_HOME/config/jvm.options
-   echo "-Djdk.attach.allowAttachSelf=true" >> $OPENSEARCH_HOME/config/jvm.options
-   echo "-Djava.security.policy=$OPENSEARCH_HOME/plugins/$PA_PLUGIN/pa_config/opensearch_security.policy" >> $OPENSEARCH_HOME/config/jvm.options
+   echo >> $OPENSEARCH_PATH_CONF/jvm.options
+   echo '## OpenDistro Performance Analyzer' >> $OPENSEARCH_PATH_CONF/jvm.options
+   echo "-Dclk.tck=$CLK_TCK" >> $OPENSEARCH_PATH_CONF/jvm.options
+   echo "-Djdk.attach.allowAttachSelf=true" >> $OPENSEARCH_PATH_CONF/jvm.options
+   echo "-Djava.security.policy=$OPENSEARCH_PATH_CONF/$PA_PLUGIN/opensearch_security.policy" >> $OPENSEARCH_PATH_CONF/jvm.options
+   echo "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED" >> $OPENSEARCH_PATH_CONF/jvm.options
 fi
 
